# staralt-enestl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: classroom.yml
src/assignments_template/: __init__.py
src/staralt/: __init__.py  staralt.py
tests/: test_assignment.py
